app/assets/stylesheets/modules/record-side-nav.css.scss
.record-side-nav {
  background-color: transparent;
  list-style-type: none;
  position: fixed;
  right: 0;
  top: 40%;
  z-index: 30000;

  li {
    button {
      background-color: $white;
      border: 1px solid $sul-record-side-nav-border-color;
      height: 35px;
      margin-top: -1px;
      outline: none;
      width: 35px;
    }

    button.active {
      background-color: $sul-record-side-nav-active-btn-bg;
      -webkit-box-shadow: inset 0 0 10px $sul-record-side-nav-active-btn-shadow;
      -moz-box-shadow: inset 0 0 10px $sul-record-side-nav-active-btn-shadow;
      box-shadow: inset 0 0 10px $sul-record-side-nav-active-btn-shadow;
    }

    &:first-child button {
      border-top-left-radius: 5px;
    }

    &:last-child button {
      border-bottom-left-radius: 5px;
    }
  }

}

